products-service/deployment/mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: products-service-mysql
  labels:
    app: products-service
spec:
  ports:
    - port: 3306
  selector:
    app: products-service
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service-mysql
  labels:
    app: products-service
spec:
  selector:
    matchLabels:
      app: products-service
      tier: mysql
  template:
    metadata:
      labels:
        app: products-service
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
