products-service/deployment/product-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: gcr.io/bootapp-252104/product-service
        imagePullPolicy: Never
        ports:
          - name: http
            containerPort: 8010
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
spec:
  selector:
    app: products
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8010
    nodePort: 30036
    protocol: TCP
