products-service/deployment/ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
spec:
  rules:
    - http:
        paths:
        - path: /api/v1/product
          backend: 
            serviceName: products-svc
            servicePort: 8080
        - path: /api/v1/order
          backend:
            serviceName: orders-svc
            servicePort: 8081
